@@ -3692,6 +3692,8 @@ current time HH:MM in 12h format
 day number
 .IP D
 weekday name
+.IP E
+sets %? to true if the escape character has been pressed.
 .IP f
 flags of the window, see \*Qwindows\*U for meanings of the various flags
 .IP F
